# pod-exec-mcp

./: .dockerignore  .gitignore  Containerfile  README.md  pyproject.toml
src/pod_exec_mcp/: __init__.py  build_image.py  server.py  server.py~
tests/: test_server.py
