[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pod_exec_mcp"
version = "0.1.0"
description = "MCP server that executes shell commands in per-session Podman containers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0.0",
]

[project.scripts]
pod_exec_mcp = "pod_exec_mcp.server:main"
pod_exec_mcp_build = "pod_exec_mcp.build_image:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pod_exec_mcp"]
